--- a/klippy/extras/temperature_sensors.cfg
+++ b/klippy/extras/temperature_sensors.cfg
@@ -21,6 +21,9 @@
 # Load "LM75" sensor
 [lm75]
 
+# Load "ADS1X1X" sensor
+[ads1x1x]
+
 # Load "MAX6675", "MAX31855", "MAX31856", and "MAX31865" sensors
 [spi_temperature]
 
