--- a/src/Kconfig
+++ b/src/Kconfig
@@ -107,6 +107,12 @@ config INITIAL_PINS
 config HAVE_GPIO
     bool
     default n
+config HAVE_PIO
+    bool
+    default n
+config HAVE_EGPIO
+    bool
+    default n
 config HAVE_GPIO_ADC
     bool
     default n
