--- a/src/rp2040/Makefile
+++ b/src/rp2040/Makefile
@@ -1,5 +1,3 @@
-# Additional RP2040 build rules
-
 # Setup the toolchain
 CROSS_PREFIX=arm-none-eabi-
 
@@ -12,10 +10,17 @@ CFLAGS_klipper.elf += --specs=nano.specs --specs=nosys.specs
 CFLAGS_klipper.elf += -T $(OUT)src/rp2040/rp2040_link.ld
 $(OUT)klipper.elf: $(OUT)stage2.o $(OUT)src/rp2040/rp2040_link.ld
 
+# Generated source files
+ifeq ($(CONFIG_HAVE_PIO),y)
+gsrc-y += rp2040/stepper_pio.pio
+endif
+
 # Add source files
 src-y += rp2040/main.c rp2040/gpio.c rp2040/adc.c generic/crc16_ccitt.c
 src-y += generic/armcm_boot.c generic/armcm_irq.c generic/armcm_reset.c
-src-y += generic/timer_irq.c rp2040/timer.c rp2040/bootrom.c
+src-y += generic/timer_irq.c rp2040/timer.c rp2040/bootrom.c rp2040/watchdog.c
+src-y += rp2040/clocks.c rp2040/pio.c
+src-y += rp2040/claim.c rp2040/dma.c rp2040/xosc.c rp2040/pll.c
 src-$(CONFIG_USBSERIAL) += rp2040/usbserial.c generic/usb_cdc.c
 src-$(CONFIG_USBSERIAL) += rp2040/chipid.c
 src-$(CONFIG_SERIAL) += rp2040/serial.c generic/serial_irq.c
